# trusty-gardener

./: .gitignore  Cargo.toml  README.adoc
trusty-gardener-backend/: Cargo.toml
trusty-gardener-backend/.cargo/: config
trusty-gardener-backend/src/: main.rs
trusty-gardener-controller/: Cargo.toml  Embed.toml
trusty-gardener-controller/src/: main.rs
trusty-gardener-frontend/: Cargo.toml  Trunk.toml  index.html
trusty-gardener-frontend/assets/style/: stylesheet.scss
trusty-gardener-frontend/src/: app.rs  main.rs
trusty-gardener-frontend/src/api/: mod.rs
trusty-gardener-frontend/src/components/: footer.rs  mod.rs  plant.rs  plant_editor.rs
trusty-gardener-model/: Cargo.toml
trusty-gardener-model/src/: lib.rs
