[package]
name = "trusty-gardener-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.17"
chrono = { version = "0.4.24", features = ["serde"] }
rppal = "0.14.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }

trusty_gardener_model = { path = "../trusty-gardener-model" }
