[package]
name = "trusty-gardener-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures = { version = "0.3.28", default-features = false }
gloo-timers = "0.2.6"
leptos = { version = "0.3.0", features = ["stable"] }
leptos_router = { version = "0.3.0", features = ["csr", "stable"] }
log = "0.4.17"
reqwasm = "0.5.0"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"

trusty_gardener_model = { path = "../trusty-gardener-model" }
